set background color to fix issue with overlapping when using transparent images

--- a/src/styles/baseline/ImageList.styl
+++ b/src/styles/baseline/ImageList.styl
@@ -9,6 +9,8 @@
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr))
 
 .ImageListItem
+  background: $paper
+  
   .content
     display: flex
     flex-direction: column
